# backend/api/restapi/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  model.Quiz:
+    properties:
+      id:
+        type: string
+      inviteCode:
+        type: string
+      name:
+        type: string
+    type: object
   model.User:
     properties:
       email:
@@ -9,6 +18,13 @@ definitions:
         type: boolean
       username:
         type: string
+    type: object
+  restapi.CreateQuizRequest:
+    properties:
+      name:
+        type: string
+    required:
+    - name
     type: object
   restapi.RegisterRequest:
     properties:
@@ -27,6 +43,120 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/create-quiz:
+    post:
+      consumes:
+      - application/json
+      description: Create a quiz with name
+      parameters:
+      - description: Quiz info
+        in: body
+        name: quiz
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.CreateQuizRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Quiz'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Register a new quiz
+      tags:
+      - quiz
+  /api/quiz/{id}:
+    get:
+      description: Retrieve a single quiz by its ID
+      parameters:
+      - description: Quiz ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Quiz'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get a quiz by ID
+      tags:
+      - quiz
+  /api/quiz/{invite}:
+    get:
+      description: Retrieve a single quiz by Invite Code
+      parameters:
+      - description: Quiz Invite Code
+        in: path
+        name: invite
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Quiz'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get a quiz by Invite Code
+      tags:
+      - quiz
   /auth/register:
     post:
       consumes:
