# backend/api/restapi/requests.go
@@ -5,3 +5,7 @@ type RegisterRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=6"`
 }
+
+type CreateQuizRequest struct {
+	Name string `json:"name" binding:"required"`
+}
