# backend/domain/model/quiz.go
@@ -3,6 +3,7 @@ package model
 import "github.com/google/uuid"
 
 type Quiz struct {
-	ID   uuid.UUID
-	Name string
+	ID         uuid.UUID
+	Name       string
+	InviteCode uuid.UUID
 }
